--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "1.0.0",
-  "name": "metatags",
+  "version": "0.0.1",
+  "name": "info-card-custom",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
